--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -6,7 +6,7 @@ COPY composer.json composer.json
 COPY composer.lock composer.lock
 COPY ./ ./
 
-RUN apt update && apt install git -y
+# RUN apt update && apt install git -y
 
 # Install Composer
 #RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
