[fix] errores en docker
se arreglan errores con docker y se agregan archivos sh para levantar el
sistema

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,12 @@
 version: "3.1"
 
+
 services:
   frontend:
     build: ./landing/
     ports:
       - 8080:8080
 
-  mariadb_emails:
-    image: mariadb/server:10.4
-    environment:
-      MARIADB_DATABASE: backend
-      MARIADB_ROOT_PASSWORD: root
-      MARIADB_USER: back
-      MARIADB_PASSWORD: back
-    volumes:
-      - ./db:/var/lib/mysql
-    ports:
-      - 3306:3306
-  
   backend:
     build: ./backend/
     volumes:
@@ -26,3 +15,19 @@ services:
       - mariadb_emails:mariadb_emails
     ports:
       - 8000:8000
+    depends_on:
+      - mariadb_emails
+
+  mariadb_emails:
+    image: mariadb/server:10.4
+    #container_name: mariadb_emails
+    environment:
+      MARIADB_DATABASE: backend
+      MARIADB_ROOT_PASSWORD: root
+      #MARIADB_USER: back
+      #MARIADB_PASSWORD: back
+    #volumes:
+    #  - ./db:/var/lib/mysql
+    #ports:
+    #  - 3306:3306
+
