--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -6,10 +6,10 @@ COPY composer.json composer.json
 COPY composer.lock composer.lock
 COPY ./ ./
 
-# RUN apt update && apt install git -y
+RUN apt update && apt install git -y
 
-# Install Composer
-#RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+#Install Composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
 #RUN composer self-update --2
 
@@ -17,7 +17,8 @@ RUN docker-php-ext-install mysqli pdo pdo_mysql
 
 #RUN composer install
 
-RUN php artisan migrate
+# no funciona por que el servidor de db no esta levantado
+# php artisan migrate
 
 EXPOSE 8000
 
